# Cassius

./: .clang-format  .gitignore  .gitmodules  .markdownlint.json  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CassiusConfig.cmake.in  Engine.tpp  INSTALL.md  LICENSE.txt  README  README.md  lib.lua  premake4.lua  vcpkg.json
Example/: CMakeLists.txt  COPYING  Interp.cpp  Interp.hpp  main.cpp
Include/: CMakeLists.txt  Cassius.hpp  CluaEngine.hpp  CpythonEngine.hpp  Engine.hpp  Manager.hpp  Source.hpp  SourceStream.hpp  SourceString.hpp
Include/Cassius/: Cassius.hpp  CluaEngine.hpp  CpythonEngine.hpp  Engine.hpp  Engine.tpp  Manager.hpp  NativeFunction.hpp  Plugin.hpp  ScriptFunction.hpp  Source.hpp  SourceFile.hpp  SourceStream.hpp  SourceString.hpp  Value.hpp
Premake4/: config.lua  lib.lua  opts.lua
Source/: CMakeLists.txt  CluaEngine.cpp  CpythonEngine.cpp  Engine.cpp  Manager.cpp  SourceStream.cpp  SourceString.cpp  premake4.lua
Source/Cassius/: CMakeLists.txt  Engine.cpp  Manager.cpp  NativeFunction.cpp  Plugin.cpp  SourceStream.cpp  SourceString.cpp  Value.cpp  premake4.lua
Source/CluaEngine/: CMakeLists.txt  CluaEngine.cpp  NOTES  debug.hpp  funcs.cpp  funcs.hpp  lua.hpp  premake4.lua
Source/CpythonEngine/: CMakeLists.txt  CpythonEngine.cpp  premake4.lua
Testing/: CMakeLists.txt  Common.cpp  Common.hpp  Source_String.cpp  Value_List.cpp  Value_bool.cpp  Value_char.cpp  Value_int.cpp  Value_operators.cpp  Value_ptr.cpp  Value_real.cpp  Value_string.cpp  lua_NativeFunction.cpp  lua_ScriptFunction.cpp  lua_eval.cpp  python_eval.cpp
cmake/Modules/: CassiusGuessTriplet.cmake
